--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   - TOXENV=py35
   - TOXENV=pep8
 before_install:
-  - pip install -U tox
+  - pip install -U tox coveralls
 script:
   - tox
 after_success:
